# Health_db

./: .gitignore  README.md  main.py  pyproject.toml
src/: ingest_and_clean.py  train_model.py
